--- a/index.css
+++ b/index.css
@@ -1,77 +1,91 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
 
-#menu-h ul {
-    list-style: none;
+
+header {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: orangered;
-    margin-top: 0px !important;
+    color: #fff;
+    padding: 15px 0;
+    text-align: center;
 }
-
-#menu-h ul li{
+header ul li{
     display: inline;
 }
-
-#menu-h ul li a{
+header ul li a{
     color: #fff;
-    padding: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    padding: 5px;
+    width: 250px;
     text-decoration: none;
     display: inline-block;
     transition: background .4s ;
     margin-left: 0%;
 }
+header ul li a:hover{
+    background-color:#0374f5;
+}
+body {
+    font-family: Arial, sans-serif;
+    margin: 10px;
+    padding: 100;
+    background-color: #f4f4f4;
+}
 
-#menu-h ul li a:hover{
-    background-color: #0307f5;
+#body-combinado{
+    background-color: lightgreen;
+}
+
+#body-hiperativo{
+    background-color: lightcoral;
+}
+
+#body-desatento{
+    background-color: lightblue;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+h1 ,h2 , h3 {
+   align-items: center;
+}
+
+
+/* Rodapé */
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    bottom: 0;
+    width: 100%;
 }
 
 .botao-principal {
     color: #fff;
-    padding: 10px;
+    padding: 8px;
     cursor: pointer;
-    display: inline;
     margin-top: 0px !important;
     transition: background .4s ;
-    margin-left: 90%;
-}
-.botao-principal :hover{
-    background-color: #0307f5;
-}
-
-.container-index{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: justify;
-    position: absolute;
+    
 }
 
 #img-site{
-    text-align: center;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100%;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-#img-educa {
-    flex: 50%;
-    padding: 20px;
-    background-position: left;
-    position: left;
-}
-
-#img-educa img{
+    width: 700px;
     height: auto;
-    width: 20vw;
-    display: flex;
-    flex: 50%;
+    display: block;
+    margin: auto;
+}
+#img-educa{
+    width: 300px;
+    height: auto;
+    display: block;
+    margin: auto;
 }
 
 form action{
@@ -134,6 +148,16 @@ input,textarea {
     margin: .5em 0 2.5em;
     margin-top: 1em;
 }
+
+
+
+
+
+
+
+
+
+
 
 #main-ece {
     padding: 1rem;
@@ -260,32 +284,7 @@ form button:hover {
 
 }
 
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1rem 0;
-    width: 100%;
-    bottom: 0;
-    }
-
-
 /* Estilos CSS para o exemplo de progresso de estudo do aluno */
-
-.container {
-    max-width: 600px;
-    margin: 20px auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-    margin-bottom: 20px;
-    width: 40%;
-    margin-right: 0px;
-}
 
 .curso {
     margin-bottom: 20px;
@@ -346,12 +345,6 @@ span {
 /* styles.css */
 
 
-header {
-    background-color: orangered;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
-}
 
 main {
     padding: 20px;
@@ -360,11 +353,6 @@ main {
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
-h1, h2, h3 {
-    margin: 0;
-}
-
 .new-topic, .topics {
     margin-bottom: 20px;
 }
@@ -411,13 +399,7 @@ button:hover {
 }
 
 
-.container {
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-}
+
 
 h2 {
     text-align: center;
@@ -456,15 +438,7 @@ button:hover {
     background-color: #45a049;
 }
 
-.container {
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+
 
 h2 {
     text-align: center;
@@ -505,4 +479,14 @@ button {
 
 button:hover {
     background-color: #45a049;
+}
+
+#cadastro-form{
+    max-width: 600px;
+    margin: auto;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
